--- a/sections/template-article.liquid
+++ b/sections/template-article.liquid
@@ -1,16 +1,33 @@
-<h1>{{ article.title }}</h1>
+{% for block in section.blocks %}
+    {% case block.type %}
+        {% when "article_title" %}
+            <h1>{{ article.title }}</h1>
+        
+        {% when "article_author" %}
+            {% if section.settings.enable_author %}
+                <small>{{ article.author }}</small>
+            {% endif %}
 
-{% if section.settings.enable_author %}
-    <small>{{ article.author }}</small>
-{% endif %}
+        {% when "article_date" %}
+            {% if section.settings.enable_date %}
+                <time datetime="{{ article.published_at | date: '%Y-%m-%d' }}">{{ article.published_at | date: '%Y-%m-%d' }}</time>
+            {% endif %}
 
-{% if section.settings.enable_date %}
-    <time datetime="{{ article.published_at | date: '%Y-%m-%d' }}">{{ article.published_at | date: '%Y-%m-%d' }}</time>
-{% endif %}
+        {% when "article_thumbnail" %}
+            <img src="{{ article.image | image_url }}" alt="{{ article.image.alt }}" width="300px" height="300px"> 
+
+        {% when "article_content" %}
+            <p>{{ article.content }}</p>
+        
+        {% else %}
+            
+    {% endcase %}
+    
+{% endfor %}
 
 
-<img src="{{ article.image | image_url }}" alt="{{ article.image.alt }}" width="300px" height="300px"> 
-<p>{{ article.content }}</p>
+
+
 
 {% schema %}
     {
@@ -29,6 +46,38 @@
                 "default": true,
                 "label": "Display Date"
 
+            }
+        ],
+
+        "blocks": [
+            {
+                "type": "article_title",
+                "name": "Title",
+                "limit": 1
+            },
+
+            {
+                "type": "article_author",
+                "name": "Author",
+                "limit": 1
+            },
+
+            {
+                "type": "article_date",
+                "name": "Date",
+                "limit": 1
+            },
+
+            {
+                "type": "article_thumbnail",
+                "name": "thumbnail",
+                "limit": 1
+            },
+
+            {
+                "type": "article_content",
+                "name": "Content",
+                "limit": 1
             }
         ]
     }
