--- a/sections/template-article.liquid
+++ b/sections/template-article.liquid
@@ -72,9 +72,9 @@
             </div>
           {% endfor %}
 
-          {% if paginate.pages > 1 %}
-            {{ paginate | default_pagination }}
-          {% endif %}
+          <div class="max-w-6xl mx-auto">
+            {% render 'pagination' %}
+          </div>
         {% endpaginate %}
       </div>
 
@@ -177,7 +177,7 @@
       {% endif %}
       {% if article.image %}
           "image": [
-              {{ article.image | image_url | prepend: 'https:' | json }}
+              {{ article.image | image_url| prepend: 'https:' | json }}
           ],
       {% endif %}
       "datePublished": {{ article.published_at | date: format: "default" | json }},
