[FIX]: Fixed the pagination feature that was displaying Hello World even when there were no pages

--- a/sections/template-blog.liquid
+++ b/sections/template-blog.liquid
@@ -30,7 +30,7 @@
               {% endif %}
 
               <a href="{{ article.url }}" class="font-medium text-blue-600 hover:text-blue-800 my-2 block">
-                {{- section.settings.blog_read_more -}}
+                {{- section.settings.blog_read_more }}
               </a>
             </div>
           </div>
