--- a/sections/template-blog.liquid
+++ b/sections/template-blog.liquid
@@ -1,5 +1,5 @@
 <div class="py-8">
-  {% paginate blog.articles by section.settings.number_of_articles %}
+  {% paginate blog.articles by 1 %}
     <h1 class="text-center text-3xl">{{ blog.title }}</h1>
 
     <div class="grid grid-cols-1 md:grid-cols-3 gap-4">
