--- a/templates/index.liquid
+++ b/templates/index.liquid
@@ -4,7 +4,7 @@
       {{ product.price | money }}
       {% unless product.available %}<br><strong>sold out</strong>{% endunless %}
       <a href="{{ product.url | within: collection }}">
-        <img src="{{ product.featured_image.src | image_url: 'large' }}" alt="{{ product.featured_image.alt | escape }}" width="200px" height="200px">
+        <img src="{{ product.featured_image.src | image_url}}" alt="{{ product.featured_image.alt | escape }}" width="200px" height="200px">
       </a>
     </div>
   {% endfor %}
