--- a/templates/product.liquid
+++ b/templates/product.liquid
@@ -1,6 +1,6 @@
 {% assign current_variant = product.selected_or_first_available_variant %}
 {% assign featured_image = current_variant.featured_image | default: product.featured_image %}
-<img src="{{ featured_image | image_url: 'large' }}" alt="{{ featured_image.alt | escape }}" id="ProductPhotoImg" width="200px" height="200px">
+<img src="{{ featured_image | image_url }}" alt="{{ featured_image.alt | escape }}" id="ProductPhotoImg" width="200px" height="200px">
 {% for image in product.images %}
   <a href="{{ image.src | image_url}}">
     <img src="{{ image.src | image_url }}" alt="{{ image.alt | escape }}" width="200px" height="200px">
