--- a/sections/template-cart.liquid
+++ b/sections/template-cart.liquid
@@ -71,16 +71,13 @@
           </div>
         </div>
 
-
-
-
         <div class="w-full my-4 md:w-80">
           {% for block in section.blocks %}
             {% case block.type %}
-              {% when "subtotal" %}
+              {% when 'subtotal' %}
                 <h3 class="text-xl">Subtotal: {{ cart.total_price | money }}</h3>
-              
-              {% when "update_button" %}
+
+              {% when 'update_button' %}
                 <div class="my-2">
                   <button
                     type="submit"
@@ -90,23 +87,19 @@
                     Update
                   </button>
                 </div>
-  
-  
+
               {% else %}
-              <div class="my-2">
-                <button
-                  type="submit"
-                  name="checkout"
-                  class="w-full p-3 border border-gray-600 font-medium bg-gray-600 text-white"
-                >
-                  Checkout
-                </button>
-              </div>
-                
+                <div class="my-2">
+                  <button
+                    type="submit"
+                    name="checkout"
+                    class="w-full p-3 border border-gray-600 font-medium bg-gray-600 text-white"
+                  >
+                    Checkout
+                  </button>
+                </div>
             {% endcase %}
-            
           {% endfor %}
-         
         </div>
       </div>
     </form>
