--- a/sections/template-collection.liquid
+++ b/sections/template-collection.liquid
@@ -12,7 +12,7 @@
       </div>
     </div>
 
-    {% render 'pagination', pagination: paginate, display_vendor: section.settings.display_vendor %}
+    {% render 'pagination', pagination: paginate %}
   {% endpaginate %}
 </div>
 
@@ -25,13 +25,6 @@
       "id": "number_of_products_per_page",
       "default": 6,
       "label": "Number of products per page"
-    },
-
-    {
-      "type": "checkbox",
-      "id": "display_vendor",
-      "default": true,
-      "label": "Vendor"
     }
   ]
 }
