--- a/snippets/product-card.liquid
+++ b/snippets/product-card.liquid
@@ -17,9 +17,9 @@
     </a>
 
     <div class="flex flex-col p-4">
-
-      <span class="text-sm text-gray-400">{{ product_product.vendor }}</span>
-
+      {% if display_vendor %}
+        <span class="text-sm text-gray-400">{{ product_product.vendor }}</span>
+      {% endif %}
 
       <a href="{{ product_product.url }}" class="text-gray-700 uppercase font-medium">{{ product_product.title }}</a>
 
