[FEATURE]: Added the option to choose the featured collection in the home page

--- a/sections/template-collection.liquid
+++ b/sections/template-collection.liquid
@@ -12,7 +12,7 @@
       </div>
     </div>
 
-    {% render 'pagination', pagination: paginate, display_vendor: section.settings.display_vendor %}
+    {% render 'pagination', pagination: paginate %}
   {% endpaginate %}
 </div>
 
