--- a/sections/featured-collection.liquid
+++ b/sections/featured-collection.liquid
@@ -1,18 +1,44 @@
 {% assign collection_handle = section.settings.featured_collection | default: 'all' %}
 {% assign collection = collections[collection_handle] %}
 
-{% for product in collection.products %}
-  {% render 'product-card', product_product: product %}
-{% endfor %}
+<div class="flex flex-col items-center my-8">
+  <h1 class="text-center text-3xl">{{ section.settings.featured_collection_title }}</h1>
+  <div class="max-w-6xl mx-auto">
+    <div class="grid grid-cols-1 md:grid-cols-4 gap-4">
+      {% for product in collection.products limit: section.settings.number_of_products_to_show %}
+        {% render 'product-card', product_product: product %}
+
+      {% else %}
+        {% for item in (1..4) %}
+          {% render 'product-card-placeholder' %}
+        {% endfor %}
+      {% endfor %}
+    </div>
+  </div>
+</div>
 
 {% schema %}
 {
   "name": "Featured Collection",
   "settings": [
     {
+      "type": "text",
+      "id": "featured_collection_title",
+      "label": "Title"
+    },
+    {
       "type": "collection",
       "id": "featured_collection",
       "label": "Select collection"
+    },
+
+    {
+      "type": "range",
+      "id": "number_of_products_to_show",
+      "label": "Number of products",
+      "min": 4,
+      "max": 10,
+      "default": 6
     }
   ]
 }
