--- a/sections/featured-collection.liquid
+++ b/sections/featured-collection.liquid
@@ -1,4 +1,4 @@
-{% assign collection_handle = section.settings.featured_collection | default: 'all' %}
+{% assign collection_handle = section.settings.featured_collection  %}
 {% assign collection = collections[collection_handle] %}
 
 <div class="flex flex-col items-center my-8">
