[FEATURE]: Added a preset for featured collections

--- a/sections/featured-collection.liquid
+++ b/sections/featured-collection.liquid
@@ -40,6 +40,11 @@
       "max": 10,
       "default": 6
     }
+  ],
+  "presets": [
+    {
+      "name": "Featured Collection"
+    }
   ]
 }
 {% endschema %}
