--- a/sections/contact-form.liquid
+++ b/sections/contact-form.liquid
@@ -16,11 +16,18 @@
 
 {% schema %}
 {
-  "name": "Contact Form",
-  "presets": [
-    {
-      "name": "Contact Form"
-    }
-  ]
+    "name": "Contact Form",
+    "settings": [
+        {
+            "type": "text",
+            "id": "title",
+            "label": "Title"
+        }
+    ],
+    "presets": [
+        {
+            "name": "Contact Form"
+        }
+    ]
 }
 {% endschema %}
