--- a/sections/contact-form.liquid
+++ b/sections/contact-form.liquid
@@ -8,27 +8,24 @@
       <div class="border p-5">
         <div class="flex flex-row items-center w-full my-3">
           <div class="text-red-500">
-            {% render 'failed-icon' %}
+            {% render 'icon-failed' %}
           </div>
-          <div class="text-sm font-medium ml-3">Oh no! Your comment was not posted.</div>
+          <div class="text-sm font-medium ml-3">Oh no! Your message is not sent</div>
         </div>
         <ul class="px-4 mb-3 ml-7 list-decimal">
           {% for error in form.errors %}
             <li>
-              <span>
-                {{ form.errors.messages[error] }}
-              </span>
+              <span>{{ form.errors.messages[error] }}</span>
             </li>
           {% endfor %}
         </ul>
       </div>
-
     {% elsif form.posted_successfully? %}
       <div class="flex flex-row items-center w-full my-3 p-5">
         <div class="text-green-500">
-          {% render 'success-icon' %}
+          {% render 'icon-success' %}
         </div>
-        <div class="text-sm font-medium ml-3">Comment is posted successfully</div>
+        <div class="text-sm font-medium ml-3">Your message is sent successfully</div>
       </div>
     {% endif %}
 
@@ -38,9 +35,8 @@
           <label class="uppercase text-xs text-gray-500 font-medium" for="contact_name">Name</label>
           <input class="border py-3 px-4 mb-3 text-gray-700 w-full" type="text" name="contact[name]" id="contact_name">
         </div>
-
         <div class="px-3 md:w-1/2">
-          <label class="uppercase text-xs text-gray-500 font-medium" for="contact_email">Email</label>
+          <label class="uppercase text-xs text-gray-500 font-medium" for="contact_email">Email address</label>
           <input
             class="border py-3 px-4 mb-3 text-gray-700 w-full"
             type="email"
@@ -65,8 +61,8 @@
         <div class="w-full px-3">
           <input
             type="submit"
+            class="w-full cursor-pointer px-4 py-2 border text-base font-medium bg-gray-900 text-white hover:bg-gray-700"
             value="Submit message"
-            class="w-full cursor-pointer px-4 py-2 border text-base font-medium bg-gray-900 text-white hover:bg-gray-700 "
           >
         </div>
       </div>
@@ -84,7 +80,6 @@
       "label": "Title"
     }
   ],
-
   "presets": [
     {
       "name": "Contact Form"
