--- a/assets/application-new.css
+++ b/assets/application-new.css
@@ -554,6 +554,10 @@ video {
   display: none;
 }
 
+.visible {
+  visibility: visible;
+}
+
 .absolute {
   position: absolute;
 }
@@ -738,6 +742,10 @@ video {
 
 .h-screen {
   height: 100vh;
+}
+
+.h-94 {
+  height: 22rem;
 }
 
 .w-20 {
