--- a/sections/template-product.liquid
+++ b/sections/template-product.liquid
@@ -67,7 +67,7 @@
     </div>
 
     <div class="product--information sticky top-5 p-2">
-      {% form 'product', product %}
+      {% form 'product', product, id: 'product-form', noValidate: 'novalidate' %}
         <input type="hidden" name="id" value="{{ selected_variant.id }}">
 
         {% for block in section.blocks %}
@@ -96,7 +96,7 @@
             {% when 'variant_selector' %}
               <div class="my-3">
                 {% unless product.has_only_default_variant %}
-                  <div data-url="{{ product.url}}" data-section="{{ section.id }}">
+                  <variant-selector data-url="{{ product.url}}" data-section="{{ section.id }}">
                     {% for option in product.options_with_values %}
                       <label for="Option-{{ section.id }}-{{ forloop.index0 }}">{{ option.name }}</label>
 
@@ -118,8 +118,12 @@
                           {% endfor %}
                         </select>
                       </div>
+
+                      <script type="application/json">
+                        {{ product.variants | json }}
+                      </script>
                     {% endfor %}
-                  </div>
+                  </variant-selector>
                 {% endunless %}
               </div>
 
@@ -168,6 +172,61 @@
     </div>
   </div>
 </div>
+
+<script>
+  class VariantSelector extends HTMLElement {
+    constructor() {
+      super();
+      this.addEventListener('change', this.onVariantChange.bind(this));
+    }
+
+    onVariantChange() {
+      this.getSelectedOptions();
+      this.getSelectedVariant();
+
+      if (currentVariant) {
+        this.updateURL();
+        this.updateFormID();
+      }
+    }
+
+    getSelectedOptions() {
+      this.options = Array.from(this.querySelectorAll('select'), (select) => select.value);
+      console.log(this.options);
+    }
+
+    getVariantJSON() {
+      this.variantData = this.variantData || JSON.parse(this.querySelector('[type="application/json"]').textContent);
+      return this.variantData;
+    }
+
+    getSelectedVariant() {
+      this.currentVariant = this.getVariantJSON().find((variant) => {
+        const findings = !variant.options
+          .map((option, index) => {
+            return this.options[index] === option;
+          })
+          .includes(false);
+
+        if (findings) return variant;
+      });
+
+      console.log(this.currentVariant);
+    }
+
+    updateURL() {
+      if (!this.currentVariant) return;
+      window.history.replaceState({}, '', `${this.dataset.url}?variant=${this.currentVariant.id}`);
+    }
+
+    updateFormID() {
+      const form_input = document.querySelector('#product-form').querySelector('input[name=id]');
+      form_input.value = this.currentVariant.id;
+    }
+  }
+
+  customElements.define('variant-selector', VariantSelector);
+</script>
 
 <script>
   const swiper = new Swiper('.swiper', {
