--- a/sections/template-product.liquid
+++ b/sections/template-product.liquid
@@ -67,7 +67,7 @@
     </div>
 
     <div class="product--information sticky top-5 p-2">
-      {% form 'product', product, id: 'product-form', noValidate: 'novalidate' %}
+      {% form 'product', product, id: 'product-form', novalidate: 'novalidate' %}
         <input type="hidden" name="id" value="{{ selected_variant.id }}">
 
         {% for block in section.blocks %}
@@ -76,14 +76,12 @@
               <div class="my-3">
                 <span class="text-xs text-gray-500">{{ product.vendor }}</span>
               </div>
-
             {% when 'title' %}
               <div class="my-3">
                 <h1 class="text-3xl text-gray-900">{{ product.title }}</h1>
               </div>
-
             {% when 'price' %}
-              <div class="my-3">
+              <div class="my-3" id="price-{{ section.id }}">
                 <span class="text-base text-gray-500 line-through">
                   {{- selected_variant.compare_at_price | money -}}
                 </span>
@@ -142,11 +140,11 @@
                   >
                 </div>
               </div>
-
             {% when 'description' %}
               <div class="my-3">
                 <p class="text-gray-700">{{ product.description }}</p>
               </div>
+
             {% when 'checkout_buttons' %}
               <div class="my-3">
                 <button
@@ -177,16 +175,17 @@
   class VariantSelector extends HTMLElement {
     constructor() {
       super();
-      this.addEventListener('change', this.onVariantChange.bind(this));
+      this.addEventListener('change', this.onVariantChange);
     }
 
     onVariantChange() {
       this.getSelectedOptions();
       this.getSelectedVariant();
 
-      if (currentVariant) {
+      if (this.currentVariant) {
         this.updateURL();
         this.updateFormID();
+        this.updatePrice();
       }
     }
 
@@ -220,8 +219,22 @@
     }
 
     updateFormID() {
-      const form_input = document.querySelector('#product-form').querySelector('input[name=id]');
+      const form_input = document.querySelector('#product-form').querySelector('input[name="id"]');
       form_input.value = this.currentVariant.id;
+    }
+
+    updatePrice() {
+      fetch(`${this.dataset.url}?variant=${this.currentVariant.id}&section_id=${this.dataset.section}`)
+        .then((response) => response.text())
+        .then((responseText) => {
+          const id = `price-${this.dataset.section}`;
+          const html = new DOMParser().parseFromString(responseText, 'text/html');
+
+          const oldPrice = document.getElementById(id);
+          const newPrice = html.getElementById(id);
+
+          if (oldPrice && newPrice) oldPrice.innerHTML = newPrice.innerHTML;
+        });
     }
   }
 
@@ -257,31 +270,26 @@
       "name": "Title",
       "limit": 1
     },
-
     {
       "type": "price",
       "name": "Price",
       "limit": 1
     },
-
     {
       "type": "variant_selector",
       "name": "Variant Selector",
       "limit": 1
     },
-
     {
       "type": "quantity",
       "name": "Quantity",
       "limit": 1
     },
-
     {
       "type": "description",
       "name": "Description",
       "limit": 1
     },
-
     {
       "type": "checkout_buttons",
       "name": "Checkout Buttons",
