--- a/sections/template-customer-login.liquid
+++ b/sections/template-customer-login.liquid
@@ -61,6 +61,15 @@
         </div>
       {% endform %}
     </div>
+
+    {% if shop.checkout.guest_login %}
+      Guest checkout is allowed
+    {% else %}
+      Guest checkout is currently disabled
+      
+    {% endif %}
+
+
   </div>
   <div x-show="pwRecoverForm" class="max-w-md w-full space-y-8">
     <div>
