--- a/sections/template-customer-login.liquid
+++ b/sections/template-customer-login.liquid
@@ -69,7 +69,7 @@
         <h1 class="mt-6 text-center text-3xl font-bold ">Continue as a guest</h1>
       </div>
 
-      {% form 'guest-login' %}
+      {% form 'guest_login' %}
         <div>
           <button
             type="submit"
