--- a/sections/template-customer-account.liquid
+++ b/sections/template-customer-account.liquid
@@ -1,12 +1,10 @@
 <div class="max-w-2xl mx-auto py-16 px-4 sm:py-24 sm:px-6 lg:max-w-7xl lg:px-8">
   <h1 class="text-2xl font-bold text-gray-700">Account</h1>
-
-  <div class="lock md:flex gap-4">
+  <div class="block md:flex gap-4">
     {% assign number_of_orders = customer.orders | size %}
     {% if number_of_orders > 0 %}
       <div class="w-full my-6 md:my-12">
         <h2 class="text-xl font-bold text-gray-700">Order history</h2>
-
         {% paginate customer.orders by 1 %}
           <div class="mt-6 grid grid-cols-1 gap-y-10 gap-x-6 sm:grid-cols-2 lg:grid-cols-4 xl:gap-x-8">
             {% for order in customer.orders %}
@@ -24,14 +22,11 @@
                     {{ 'product-1' | placeholder_svg_tag: 'w-full h-full object-center object-cover' }}
                   {% endif %}
                 </div>
-
                 <div class="mt-4 flex items-start justify-between">
                   <div>
                     <h3 class="text-sm text-gray-700">{{ order.name | link_to: order.customer_url }}</h3>
-
                     <p class="mt-1 text-sm text-gray-500">{{ order.financial_status_label }}</p>
                   </div>
-
                   <div class="text-right">
                     <p class="text-sm font-medium text-white bg-gray-700 rounded-full px-3 py-1">
                       {{ order.fulfillment_status_label }}
@@ -47,17 +42,17 @@
           </div>
         {% endpaginate %}
       </div>
-
     {% else %}
       <div class="w-full h-80 flex items-center justify-center">
         <h2 class="text-base md:text-2xl font-medium">You currently don't have any orders</h2>
       </div>
     {% endif %}
-
     <div class="w-full md:w-1/4">
       <h2 class="text-xl font-bold text-gray-700 mb-12">Account details</h2>
       {{ customer.default_address | format_address }}
-      <a class="text-sm text-blue-600 hover:text-blue-900 underline" href="{{ routes.account_addresses_url }}">View addresses</a>
+      <a href="{{ routes.account_addresses_url }}" class="text-sm text-blue-600 hover:text-blue-900 underline"
+        >View addresses</a
+      >
     </div>
   </div>
 </div>
