--- a/sections/template-customer-account.liquid
+++ b/sections/template-customer-account.liquid
@@ -13,7 +13,7 @@
                   {% if order.line_items.first.image %}
                     <img
                       class="w-full h-full object-center object-cover"
-                      src="{{ order.line_items.first.image | image_url }}"
+                      src="{{ order.line_items.first.image | image_url:'medium' }}"
                       alt="{{ order.line_items.first.image.alt }}"
                       width=""
                       height=""
