--- a/sections/template-customer-account.liquid
+++ b/sections/template-customer-account.liquid
@@ -13,10 +13,10 @@
                   {% if order.line_items.first.image %}
                     <img
                       class="w-full h-full object-center object-cover"
-                      src="{{ order.line_items.first.image | image_url:'medium' }}"
+                      src="{{ order.line_items.first.image | image_url }}"
                       alt="{{ order.line_items.first.image.alt }}"
-                      width=""
-                      height=""
+                      width="20px"
+                      height="20px"
                     >
                   {% else %}
                     {{ 'product-1' | placeholder_svg_tag: 'w-full h-full object-center object-cover' }}
