--- a/sections/template-customer-account.liquid
+++ b/sections/template-customer-account.liquid
@@ -13,11 +13,11 @@
                 <div class="w-full min-80 bg-gray-200 rounded-md overflow-hidden lg:h-80">
                   {% if order.line_items.first.image %}
                     <img
-                      class="w-full h-full object-center object-cover"
+                      class="w-20 h-20 object-center object-cover"
                       src="{{ order.line_items.first.image | image_url }}"
                       alt="{{ order.line_items.first.image.alt }}"
-                      width="20px"
-                      height="20px"
+                      width=""
+                      height=""
                     >
                   {% else %}
                     {{ 'product-1' | placeholder_svg_tag: 'w-full h-full object-center object-cover' }}
