--- a/sections/template-customer-order.liquid
+++ b/sections/template-customer-order.liquid
@@ -97,4 +97,32 @@
       </div>
     {% endfor %}
   </div>
+
+  <div class="w-full grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4 lg:gap-12 border border-gray-200 rounded-sm p-4 md:p-12 my-6 bg-gray-50">
+    <div>
+      <h1 class="ont-medium mb-4">Billing Address</h1>
+
+      {{ order.billing_address | format_address }}
+
+    </div>
+    <div>
+      <h1 class="font-medium mb-4">Payment information</h1>
+
+      {% for transaction in order.transactions %}
+        <div class="mb-4">
+          {% assign credit_card_company = transaction.payment_details.credit_card_company %}
+
+          {% if credit_card_company %}
+            <p>{{ credit_card_company }}</p>
+            
+          {% endif %}
+
+        </div>
+        
+      {% endfor %}
+
+
+    </div>
+    <div></div>
+  </div>
 </div>
