[FEATURE]: addresses page in progress

--- a/sections/template-customer-addresses.liquid
+++ b/sections/template-customer-addresses.liquid
@@ -182,3 +182,21 @@
     {% endpaginate %}
   </div>
 </div>
+
+
+<script>
+  class CustomerAddress {
+    constructor() {
+      this.initCustomerAddress();
+
+    }
+
+    initCustomerAddress() {
+      console.log("Hello World")
+
+    }
+
+  }
+
+  const customerAddress = new CustomerAddress();
+</script>
