[FEATURE]: addresses page in progress

--- a/sections/template-customer-addresses.liquid
+++ b/sections/template-customer-addresses.liquid
@@ -106,8 +106,10 @@
             id="address_country_{{ form.id }}"
             value="{{ form.country }}"
             class="w-full text-gray-700 border px-4 py-3 focus:outline-none"
+            data-country-selector
           >
             {{ all_country_option_tags }}
+
           </select>
         </div>
 
