[FEATURE]: addresses page in progress

--- a/sections/template-customer-addresses.liquid
+++ b/sections/template-customer-addresses.liquid
@@ -378,6 +378,7 @@
     constructor() {
       this.initCustomerAddress();
       this.customerAddressesSelector();
+      this.initDeleteAddressButtons();
     }
 
     initDeleteAddressButtons() {
