[FEATURE]: addresses page in progress

--- a/sections/template-customer-addresses.liquid
+++ b/sections/template-customer-addresses.liquid
@@ -383,7 +383,7 @@
 
     initDeleteAddressButtons() {
       const deleteButtons = document.querySelectorAll("button[data-delete-address]");
-      coonsole.log(deleteButtons);
+      console.log(deleteButtons);
     }
 
 
