--- a/sections/template-product.liquid
+++ b/sections/template-product.liquid
@@ -175,10 +175,6 @@
   </div>
 
   <style>
-    .media {
-      padding-top: 100%;
-    }
-
     .media model-viewer {
       display: block;
       position: absolute;
@@ -202,7 +198,7 @@
               {% render 'close-icon' %}
             </button>
           </div>
-          <div id="body" class="media block relative"></div>
+          <div id="body" class="media block relative" style="padding-top: min(calc(100vh - 5rem), 100%)"></div>
         </div>
       </div>
     </div>
