--- a/sections/template-product.liquid
+++ b/sections/template-product.liquid
@@ -175,7 +175,7 @@
   </div>
 
   <style>
-    .media model-viewer {
+    .media model-viewer, .media > * {
       display: block;
       position: absolute;
       top: 0px;
