--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -24,7 +24,7 @@
   <body>
     {% section 'header' %}
 
-    <main role="main" id="game-container">
+    <main role="main">
       {{ content_for_layout }}
     </main>
   </body>
