[FEATURE]: Mario game

--- a/sections/mario-game.liquid
+++ b/sections/mario-game.liquid
@@ -1,9 +1,7 @@
 <script src="https://kaboomjs.com/lib/0.5.0/kaboom.js" defer></script>
 <script src="{{ 'game.js' | asset_url }}" defer></script>
 
-<div id="game-container">
-
-</div>
+<div id="game-container"></div>
 
 {% schema %}
 {
@@ -16,4 +14,3 @@
   ]
 }
 {% endschema %}
-
